<resources>
    <string name="app_name">Baby\'s Drawing App</string>
    <string name="action_settings">Settings</string>
    <string name="start_new">New</string>
    <string name="erase">Erase</string>
    <string name="clear">Save</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="load">Load</string>
    <string name="paint">Paint</string>
    <string name="dialog_message">Dialog Message</string>
    <string name="timeout_msg">Do you like your work?</string>
    <string name="save_msg">Save Drawing?</string>
    <string name="load_msg">Load Previous Painting?</string>
    <string name="new_msg">Start New Drawing?</string>
    <string name="clear_msg">Clear the Screen?</string>
</resources>
